            * Assistants :
                - The module 'creme_jobs' has been removed (_UserMessagesSendType etc...).
                - In the model 'UserMessage', the field 'email_sent' & the method 'send_mails()' have been removed.
                - In 'reminders', the attributes 'ReminderAlert.body' & 'ReminderTodo.body' have been removed.
            * Documents :
                - In the context of the brick 'ChildFoldersBrick', "folder_model" is not injected anymore.
            * Billing :
                - The method 'populate.Populator.create_reports()' has been replaced by a new one, '_populate_reports()'.
            * Opportunities :
                - The class 'bricks.OpportunityCardHatBrick' (& the related template) has been reworked to follow the changes in app "persons".
                  A new class 'ContactsSummary' has been introduced, and the class variable "displayed_contacts_number" has been move into it.
                - The method 'populate.Populator.create_report_n_graphes()' has been replaced by a new one, '_populate_report_n_graphes()'.
            * Commercial :
                - The value 'constants.PROP_IS_A_SALESMAN' has been replaced by 'UUID_PROP_IS_A_SALESMAN'.
            * Mobile :
                - In the function-views 'persons_portal()' & 'search_person()', "contact_model" & "orga_model" are not injected in the template context anymore.
                - The CSS classes referencing 'ActivityType' IDs have been renamed;
                  e.g. "activity-type-activities-activitytype_meeting" became "activity-type-meeting".
            * Crudity :
                - The method 'bricks.CrudityHistoryBrick.generate_id()' has been removed.
            * CTI :
                - In the class-view 'views.PhoneCallCreation', some the attributes & methods have been replaced
                  in order to use UUIDs instead of integer IDs for statuses & types.
            * SMS :