@@ -61,7 +61,8 @@ from .base import (
 )
 
 if apps.is_installed('creme.assistants'):
-    from creme.assistants.constants import PRIO_NOT_IMP_PK
+    # from creme.assistants.constants import PRIO_NOT_IMP_PK
+    from creme.assistants.constants import UUID_PRIORITY_NOT_IMPORTANT
     from creme.assistants.models import Alert, UserMessage
 
 
@@ -1333,7 +1334,8 @@ class ActivityTestCase(BrickTestCaseMixin, _ActivitiesTestCase):
             message.title,
         )
         self.assertDatetimesAlmostEqual(now(), message.creation_date)
-        self.assertEqual(PRIO_NOT_IMP_PK,  message.priority_id)
+        # self.assertEqual(PRIO_NOT_IMP_PK,  message.priority_id)
+        self.assertUUIDEqual(UUID_PRIORITY_NOT_IMPORTANT, message.priority.uuid)
         # self.assertFalse(message.email_sent)
         self.assertEqual(meeting.id,             message.entity_id)
         self.assertEqual(meeting.entity_type_id, message.entity_content_type_id)
